# yamyam-ops

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yaml  deploy.yml  docker-build.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: activity_logs.py  auth.py  items.py  kakao_diners.py  kakao_reviewers.py  kakao_reviews.py  preload.py  recommendation.py  redis.py  reviews.py  upload.py  users.py  vector_db.py
backend/app/core/: config.py  db.py  dependencies.py  firebase_auth.py  migrations.py  redis_db.py
backend/app/database/: activity_log_queries.py  base_queries.py  item_queries.py  kakao_queries.py  user_queries.py
backend/app/models/: __init__.py  activity_log.py  item.py  kakao_diner.py  kakao_review.py  kakao_reviewer.py  preference.py  user.py
backend/app/processors/: file_processor.py  kakao_data_processor.py
backend/app/schemas/: activity_log.py  item.py  item_kakao_mapping.py  kakao_diner.py  kakao_review.py  kakao_reviewer.py  recommendation.py  redis_schemas.py  review.py  token.py  user.py  vector_db.py
backend/app/services/: activity_log_service.py  base_service.py  kakao_diner_service.py  kakao_review_service.py  kakao_reviewer_service.py  recommendation_service.py  redis_service.py  token_service.py  upload_service.py  user_service.py  vector_db_service.py
backend/app/utils/: jwt_utils.py  ulid_utils.py
fastapi/: Dockerfile  requirements.txt
fastapi/app/api/v1/: __init__.py  auth.py  kakao_diners.py  kakao_reviewers.py  reviews.py  upload.py  users.py
fastapi/app/core/: db.py  firebase_auth.py
fastapi/app/database/: __init__.py  review_queries.py
fastapi/app/models/: base.py  kakao_reviewer.py  review.py
fastapi/app/processors/: __init__.py  file_processor.py
fastapi/app/schemas/: kakao_diner.py  kakao_review.py
fastapi/app/services/: __init__.py  base_service.py  kakao_diner_service.py  kakao_review_service.py  kakao_reviewer_service.py
nginx/conf/: default.conf  default.prod.conf
postgres/init/: 01_init.sql
scripts/: deploy.sh
