[project]
name = "yamyam-ops"
version = "0.1.0"
description = "MLOps system for yamyam-lab"
authors = [{name = "Lunchcorp", email = "rocky@lunchcorp.com"}]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "pandera>=0.17.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "fuzzywuzzy>=0.18.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "ruff==0.9.9",
    "pre-commit>=4.0,<5.0",
]

[tool.uv.workspace]
members = [
    "backend",
]

[tool.ruff]
# Refer https://github.com/astral-sh/ruff?tab=readme-ov-file#configuration
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = ["E4", "E7", "E9", "F", "I", "UP006"]
lint.ignore = ["E722", "F403", "F405", "E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Like Black, use double quotes for strings.
format.quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
format.indent-style = "space"

# Like Black, respect magic trailing commas.
format.skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
format.line-ending = "auto"

# isort 설정
[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
