[project]
name = "yamyam-fastapi"
version = "0.1.0"
description = "FastAPI application for yamyam-ops"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.23",
    "pydantic==2.11.9",
    "pydantic-settings==2.6.1",
    "python-multipart==0.0.6",
    "httpx==0.25.2",
    "redis==5.0.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv>=1.0.0",
    "pandas==2.1.3",
    "firebase-admin==6.4.0",
    "python-ulid==3.1.0",
    "faiss-cpu==1.7.4",
    "paramiko==3.4.0",
    "yamyam-lab @ git+https://github.com/lunch-corp/yamyam-lab.git@v1.0.6",
]


[tool.uv.extra-build-dependencies]
kiwipiepy = ["numpy"]
